--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^18.2.18",
     "axios": "^1.6.5",
     "bootstrap": "^5.3.2",
+    "history": "^5.3.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.2",
     "react-dom": "^18.2.0",
