--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "axios": "^1.6.5",
     "bootstrap": "^5.3.2",
     "date-fns": "^3.2.0",
+    "dotenv": "^16.3.2",
     "history": "^5.3.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.2",
     "react-datepicker": "^4.25.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.2",
+    "react-s3": "^1.3.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -48,7 +50,7 @@
   "devDependencies": {
     "@types/react-datepicker": "^4.19.5",
     "react-scripts": "^5.0.1",
-    "typescript": "^5.3.3",
+    "typescript": "^4.9.5",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4"
   }
