--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^5.3.2",
     "date-fns": "^3.2.0",
     "history": "^5.3.0",
+    "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.2",
     "react-datepicker": "^4.25.0",
