--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "bootstrap": "^5.3.2",
     "date-fns": "^3.2.0",
     "dotenv": "^16.3.2",
+    "express": "^4.18.2",
+    "gh-pages": "^6.1.1",
     "history": "^5.3.0",
     "jwt-decode": "4.0.0",
+    "nodemon": "^3.0.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.2",
     "react-datepicker": "^4.25.0",
@@ -28,7 +31,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
+    "homepage": "https://game-community-project.github.io/front-end/"
   },
   "eslintConfig": {
     "extends": [
@@ -55,4 +61,5 @@
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4"
   }
+
 }
