--- a/package.json
+++ b/package.json
@@ -31,10 +31,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
-    "homepage": "https://game-community-project.github.io/front-end/"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
