--- a/package.json
+++ b/package.json
@@ -33,8 +33,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
-    "homepage": "https://game-community-project.github.io/front-end/"
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
